[project]
name = "smarter-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "flagembedding==1.4.0",
    "grandalf==0.8",
    "langchain==1.3.7",
    "langchain-community==1.0.0a1",
    "langchain-openai==1.3.2",
    "loguru>=0.7.3",
    "magic-pdf==1.3.12",
    "minio==7.2.20",
    "modelscope==1.37.1",
    "pymilvus==3.0.0",
    "pymilvus-model==0.3.2",
    "pymongo==4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.32",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "uvicorn==0.49.0",
]
